[package]
name = "gss-search"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.5.4", features = ["derive"] }
dirs = "5.0.1"
google-sheets4 = "5.0.4"
hyper = { version = "1.3.1", features = ["client"] }
inquire = "0.7.5"
regex = "1.10.4"
reqwest = { version = "0.12.4", features = ["json"] }
serde = { version = "1.0.203", features = ["derive"] }
serde_json = "1.0.117"
skim = "0.10.4"
tokio = { version = "1.37.0", features = ["full"] }
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["json"] }
